	directions.

	Added 'showtabline' option that controls visibility of tab line.

	Added TabLineSel highlight group for highlighting tip of the selected tab
	on the tab line.

	Added :goto command that navigates to specified file/directory.  Thanks to
	mateusz28 and Dmitry Frank (a.k.a. dimonomid).

	Added addition and subtraction operations to the parser.

	:quit, :wq, :exit, :xit, ZZ and ZQ now try to close current tab before
	closing the application.

	More explicit documentation about leaving custom views.  Thanks to
	Desperados.

	Fixed preview command not being run with correct working directory on
	startup (e.g., when preview was on in vifminfo).

	Fixed completion for commands that follow "|" when they are preceded by
	commands with complicated syntax like :substitute.

	Fixed "|" not preceded with space being ignored as command separator for
	some commands.

	Fixed memory leak on `:highlight clear {file-specific-group}`.

	Fixed file-specific highlighting being added even when :highlight command
	contains syntax error.

	Fixed highlight group being partially updated by :highlight command with
	incorrect syntax.

	Fixed parsing of :highlight command when tabulation is used to separate
	arguments.  Thanks to Robert Pergl (a.k.a. perglr).

	Fixed number of elements in a directory ("nitems") not being updated.
	Thanks to filterfalse.

	Fixed local filter not being applied to the view after q=.  Thanks to
	filterfalse.

	Fixed hang of a remote instance after receiving at least two consecutive
	packages that cause an error message to be displayed.  Thanks to
	filterfalse.

	Fixed absence of error on doing `--remote` to a server that doesn't exist.

0.9.1-beta to 0.9.1

	Fixed :clone and :copy refusing to copy broken symbolic links, even though C
	and p keys copy them.

	Fixed C key not checking readability of a single unselected file, like
	:clone does.

	Fixed possible crash on `:highlight clear {pattern}` and highlights not
	being updated.
