@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.9.1  Last change: 2018 Feb 24
+*vifm-app.txt*    For Vifm version 0.9.1  Last change: 2018 Feb 26
 
  Email for bugs and suggestions: <xaizek@posteo.net>
 
@@ -4131,6 +4131,7 @@ has({property})     Integer       Checks whether instance has {property}.
 layoutis({type})    Integer       Checks whether layout is of type {type}.
 paneisat({loc})     Integer       Checks whether current pane is at {loc}.
 system({command})   String        Executes shell command and returns its output.
+tabpagenr([{arg}])  Integer       Returns number of current or last tab.
 term({command})     String        Like system(), but for interactive commands.
 
 
@@ -4257,6 +4258,13 @@ terminal and are capable of handling stream redirection.
 Usage example: >
   " command to enter .git/ directory of git-repository (when ran inside one)
   command! cdgit :execute 'cd' system('git rev-parse --git-dir')
+
+tabpagenr([{arg}])                             *vifm-tabpagenr()*
+
+When called without arguments returns number of current tab page base one.
+
+When called with `"$"` as an argument returns number of the last tab page base
+one, which is the same as number of tabs.
 
 term({command})                                *vifm-term()*
 
